# bl60x-flash

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
bl60x_flash/: main.py
